--- a/app/src/main/res/layout/fragment_favourite.xml
+++ b/app/src/main/res/layout/fragment_favourite.xml
@@ -15,6 +15,10 @@
         android:textColor="@color/white"
         android:text="@string/Favourites" />
 
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -22,4 +26,6 @@
         android:id="@+id/linLayout">
 
     </LinearLayout>
+
+    </ScrollView>
 </LinearLayout>
